Composer 1st pass #2587

--- a/src/app/common/components/button-v2/button.component.html
+++ b/src/app/common/components/button-v2/button.component.html
@@ -8,6 +8,7 @@
 <m-dropdownMenu
   *ngIf="dropdown"
   [menu]="dropdown"
+  [anchorPosition]="dropdownAnchorPosition"
   triggerClass="m-button__dropdownArrow"
   menuClass="m-button__dropdownMenu"
   data-cy="button-dropdown-action"
