--- a/src/app/modules/composer/components/popup/popup.component.html
+++ b/src/app/modules/composer/components/popup/popup.component.html
@@ -1,7 +1,5 @@
 <div class="m-composer__popup" [hidden]="!open">
-  <div class="m-composerPopup__close" (click)="dismiss()">
-    <m-icon iconId="close"></m-icon>
-  </div>
+  <div class="m-composerPopup__close" (click)="dismiss()" i18n>Close</div>
 
   <ng-template dynamic-host></ng-template>
 </div>
