--- a/src/app/modules/composer/components/toolbar/toolbar.component.html
+++ b/src/app/modules/composer/components/toolbar/toolbar.component.html
@@ -74,6 +74,7 @@
       (inProgress$ | async) || (isPosting$ | async) || !(canPost$ | async)
     "
     [dropdown]="postButtonDropdown"
+    [dropdownAnchorPosition]="{ top: '100%', right: '0' }"
     (onAction)="onPost($event)"
     data-cy="post-button"
   >
