--- a/src/app/common/components/dropdown-menu/dropdown-menu.component.html
+++ b/src/app/common/components/dropdown-menu/dropdown-menu.component.html
@@ -3,7 +3,12 @@
 </span>
 
 <ng-container *ngIf="isOpen">
-  <div [ngClass]="menuCssClasses" (click)="close()" #menuWrapperElement>
+  <div
+    [ngClass]="menuCssClasses"
+    [ngStyle]="anchorPosition"
+    (click)="close()"
+    #menuWrapperElement
+  >
     <ng-container *ngTemplateOutlet="menu"></ng-container>
   </div>
 
