'Delete Post' showing on all posts in Canary

--- a/src/app/modules/groups/profile/feed/sorted.component.html
+++ b/src/app/modules/groups/profile/feed/sorted.component.html
@@ -65,6 +65,8 @@
           }"
           [allowAutoplayOnScroll]="true"
           [slot]="i + 1"
+          [canDelete]="group['is:owner'] || group['is:moderator']"
+          (deleted)="delete($event)"
         ></m-activity>
       </ng-container>
     </ng-container>
