--- a/src/app/common/layout/v3-topbar/v3-topbar.component.html
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.html
@@ -1,5 +1,5 @@
 <ng-template #searchBar>
-  <div class="m-v3Topbar__searchBox">
+  <div class="m-v3Topbar__searchBox" *ngIf="showSearchBar">
     <ng-content select="[search]"></ng-content>
   </div>
 </ng-template>
