(fix): safari reply bar being ignored - closes #2863

--- a/src/app/modules/comments/comment/comment.component.scss
+++ b/src/app/modules/comments/comment/comment.component.scss
@@ -170,6 +170,7 @@
   font-size: 16px;
   cursor: pointer;
   outline: none;
+  width: 0;
   @include m-theme() {
     color: themed($m-grey-400);
   }
