--- a/src/app/modules/channels/v2/actions/edit.component.html
+++ b/src/app/modules/channels/v2/actions/edit.component.html
@@ -1,3 +1,7 @@
-<a class="m-button-v2 m-button-v2--transparent" (click)="edit()" i18n>
+<a
+  class="m-button-v2 m-button-v2--transparent"
+  (click)="channelEditIntent.edit()"
+  i18n
+>
   Edit Channel
 </a>
