--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
@@ -36,7 +36,7 @@
 </div>
 
 <div
-  *ngIf="!disabled"
+  *ngIf="!disabled && boosts.length"
   #rotatorEl
   [class.m-newsfeed__boostRotator]="useNewNavigation"
   [style.min-height]="height"
