(fix): do not shows boosts if list is empty - closes #3007

--- a/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
+++ b/src/app/modules/newsfeed/boost-rotator/boost-rotator.component.html
@@ -36,10 +36,11 @@
 </div>
 
 <div
-  *ngIf="!disabled && boosts.length"
+  *ngIf="!disabled"
   #rotatorEl
   [class.m-newsfeed__boostRotator]="useNewNavigation"
   [style.min-height]="height"
+  [hidden]="!boosts.length"
 >
   <ng-container *ngFor="let entity of boosts; let i = index">
     <ng-container *mIfFeature="'navigation'; else legacyActivity">
