--- a/src/app/modules/wallet/v2/components/transactions-table/transactions-table.component.html
+++ b/src/app/modules/wallet/v2/components/transactions-table/transactions-table.component.html
@@ -9,7 +9,7 @@
           <td colspan="4">{{ tx.displayDate }}</td>
         </tr>
       </ng-container>
-      <tr>
+      <tr class="m-walletTransactionsTable__row--hasIcon">
         <td class="m-walletTransactionsTable__time">{{ tx.displayTime }}</td>
         <td class="m-walletTransactionsTable__details">
           <ng-container [ngSwitch]="tx.superType">
