--- a/src/app/modules/wallet/v2/tokens/onboarding/token-onboarding.component.scss
+++ b/src/app/modules/wallet/v2/tokens/onboarding/token-onboarding.component.scss
@@ -63,7 +63,7 @@ m-walletTokenOnboarding {
         cursor: default;
         text-decoration: line-through;
         @include m-theme() {
-          color: themed($m-textColor--tertiary);
+          color: themed($m-textColor--secondary);
         }
       }
     }
