--- a/src/app/modules/wallet/v2/tokens/balance/balance-tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/balance/balance-tokens.component.html
@@ -64,10 +64,10 @@
           wallet.offchain.balance > 0 &&
           (wallet.onchain.address || wallet.receiver.address)
         "
-        (click)="showModal = true"
+        (click)="showTransferModal = true"
         >Transfer to On-Chain</a
       > -->
-      <a (click)="showModal = true">Transfer to On-Chain</a>
+      <a (click)="showTransferModal = true">Transfer to On-Chain</a>
     </div>
   </div>
 
@@ -85,14 +85,58 @@
     </div>
   </div>
   <div class="m-walletBalance--tokens__learnMore">
-    Learn more about <a routerLink="/tokens">Minds Tokens</a> and our
-    <a routerLink="/rewards">Rewards System</a>.
+    <a (click)="showTokenModal = true">Learn more</a> about Minds Tokens and our
+    Rewards System.
   </div>
-  <m-walletModal [showModal]="showModal" (closeModal)="showModal = false">
+  <m-walletModal
+    [showModal]="showTransferModal"
+    (closeModal)="showTransferModal = false"
+  >
     <m-walletOnchainTransfer
-      *ngIf="wallet && showModal"
+      *ngIf="wallet && showTransferModal"
       (transferComplete)="transferComplete()"
     ></m-walletOnchainTransfer>
+  </m-walletModal>
+  <m-walletModal
+    [showModal]="showTokenModal"
+    (closeModal)="showTokenModal = false"
+  >
+    <h2>Learn About Tokens</h2>
+    <h4>How the new rewards system works</h4>
+    <p class="m-walletSecondaryText--desc">
+      Minds rewards you with crypto for contributing to the network. The first
+      step in joining our rewards program is to provide your mobile number. We
+      convert your number into a hash ID using SHA-256 encryption and a salt key
+      to create a unique identifier for your account. We do not store your
+      number on our servers.
+    </p>
+    <p class="m-walletSecondaryText--desc">
+      Rather than rewarding you with Points in real-time, we are now
+      distributing our crypto rewards as a “Daily Reward Pool”. During the test
+      network, we will be experimenting with how the Daily Reward Pool is
+      calculated, but it will ideally be automated based on user participation
+      once we move into the Main Ethereum network.
+    </p>
+    <p class="m-walletSecondaryText--desc">
+      Every day, we measure your contributions to the network and you receive a
+      “Contribution Score” which can be found in the Contributions section of
+      your wallet. We then calculate how much you contributed to the network
+      relative to the entire community, which determines the percentage of the
+      Daily Reward Pool that you earn.
+    </p>
+    <p class="m-walletSecondaryText--desc">
+      It is important to note that with the new system, you will only receive
+      credit for unique interaction, and you can only earn credit from another
+      unique user once per metric per day. (If a friend votes on my content 100
+      times in a day, I will only get credit for 1 vote). This is critical in
+      preventing gaming and abuse of the system as we move into more valuable
+      token rewards. We are essentially measuring how many unique users you
+      reached in a given day.
+    </p>
+    <p class="m-walletSecondaryText--desc">
+      Daily rewards will be distributed at 02:00 am GMT everyday into your
+      off-chain address.
+    </p>
   </m-walletModal>
 </ng-container>
 <ng-template #loading>
