fix misaligned checkmark

--- a/src/app/common/components/forms/checkbox/checkbox.component.html
+++ b/src/app/common/components/forms/checkbox/checkbox.component.html
@@ -7,6 +7,8 @@
   />
   <div class="m-formInputCheckbox__visibleWrapper">
     <span class="m-formInputCheckbox__custom"></span>
-    <span><ng-content></ng-content></span>
+    <span class="m-formInputCheckbox__customLabel"
+      ><ng-content></ng-content
+    ></span>
   </div>
 </label>
