Discovery 'for you' screen to fallback to 'your feed' on scroll

--- a/src/app/modules/discovery/trends/trends.component.html
+++ b/src/app/modules/discovery/trends/trends.component.html
@@ -41,3 +41,5 @@
     <m-discoveryTrends__listItem [trend]="trend"></m-discoveryTrends__listItem>
   </li>
 </ul>
+
+<m-discovery__feedsList *ngIf="showPreferredFeed"></m-discovery__feedsList>
